# console-app

./: .gitignore  CLAUDE.md  GEMINI.md  docker-compose.yml  feature_description.txt  package-lock.json  package.json  research.md  vercel.json
.claude/agents/: auth-security-engineer.md  database-architect.md  fastapi-backend-developer.md  nextjs-frontend-builder.md
.claude/skills/auth-skill/: SKILL.md
.claude/skills/backend-skill/: SKILL.md
.claude/skills/frontend-skill/: SKILL.md
.claude/skills/neon-database-skill/: SKILL.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  verify_api.py
frontend/: Dockerfile  README.md  check_db.js  eslint.config.mjs  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  (+1 more)
frontend/src/components/: Chatbot.jsx
frontend/src/lib/: auth.ts  constants.ts  navigation.ts  tasks.ts  types.ts
history/prompts/002-nextjs-frontend/: 001-setup-nextjs-frontend.spec.prompt.md  002-research-nextjs-better-auth.spec.prompt.md  003-plan-nextjs-frontend.plan.prompt.md  004-generate-tasks-nextjs-frontend.tasks.prompt.md  005-implement-nextjs-frontend.green.prompt.md  006-fix-nextjs-dev-server.misc.prompt.md
specs/002-nextjs-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-todo-frontend-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+39 files in other folders)
